<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.taekwondoscorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#0029f9"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp"
            tools:context="com.example.android.taekwondoscorekeeper.MainActivity">

            <TextView
                android:id="@+id/teamAPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_point"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="48sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/team_A"
                android:textAlignment="center"
                android:textColor="#ff0000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnAddOnePointA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOnePointForTeamA"
                android:text="@string/add_one_points" />

            <Button
                android:id="@+id/btnAddThreePointsA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addThreePointsForTeamA"
                android:text="@string/add_three_points" />

            <Button
                android:id="@+id/btnAddFourPointsA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addFourPointsForTeamA"
                android:text="@string/add_four_points" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/teamBPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_point"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="48sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/team_B"
                android:textAlignment="center"
                android:textColor="#42d221"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnAddOnePointB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOnePointForTeamB"
                android:text="@string/add_one_points" />

            <Button
                android:id="@+id/btnAddThreePointsB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addThreePointsForTeamB"
                android:text="@string/add_three_points" />

            <Button
                android:id="@+id/btnAddFourPointsB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addFourPointsForTeamB"
                android:text="@string/add_four_points" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/btnResetPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="resetPoint"
            android:text="@string/reset" />
    </RelativeLayout>


</LinearLayout>
